[package]
name = "svg2png-wasm-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
resvg = "0.38"
tiny-skia = "0.11"
usvg = "0.38"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "ImageData",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Document",
  "Element",
  "Window",
]

[profile.release]
opt-level = "s"
debug = false
lto = true