[package]
name = "svg2png-wasm-rs"
version = "0.1.1"
edition = "2021"
description = "A WASM-powered library to convert SVG markup into PNG images"
license = "MIT OR Apache-2.0"
repository  = "https://github.com/don-hicks/svg2png-wasm-rs"
homepage     = "https://github.com/don-hicks/svg2png-wasm-rs"
documentation = "https://docs.rs/svg2png-wasm-rs"
readme       = "README.md"
keywords     = ["svg", "png", "wasm", "image", "conversion"]
categories   = ["wasm", "image_processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
resvg = "0.38"
tiny-skia = "0.11"
usvg = "0.38"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "ImageData",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Document",
  "Element",
  "Window",
]

[profile.release]
opt-level = "s"
debug = false
lto = true